tests/baselines/reference/unusedTypeParameters3.errors.txt
tests/cases/compiler/unusedTypeParameters3.ts(2,15): error TS6133: Variable 'typeparameter1' has never been used.
tests/cases/compiler/unusedTypeParameters3.ts(2,47): error TS6133: Variable 'typeparameter3' has never been used.


==== tests/cases/compiler/unusedTypeParameters3.ts (2 errors) ====
    
    class greeter<typeparameter1, typeparameter2, typeparameter3> {
                  ~~~~~~~~~~~~~~
!!! error TS6133: Variable 'typeparameter1' has never been used.
                                                  ~~~~~~~~~~~~~~
!!! error TS6133: Variable 'typeparameter3' has never been used.
        private x: typeparameter2;
    
        public function1() {
            this.x;
        }
    }